# test1

./: README.md  background.js  content.js  extension_base.html  issue_4_resolution.md  manifest.json  popup.html  popup.js  pyproject.toml  script.js  styles.css
ml_project/: pyproject.toml
ml_project/data_processing/: data_processing.py
ml_project/evaluation/: evaluation.py
ml_project/feature_engineering/: feature_engineering.py
ml_project/ml_project/: __init__.py
ml_project/ml_project/data_processing/: __init__.py
ml_project/ml_project/evaluation/: __init__.py
ml_project/ml_project/feature_engineering/: __init__.py
ml_project/ml_project/modeling/: __init__.py
ml_project/modeling/: modeling.py
src/: __init__.py  config.py  data_processing.py  evaluation.py  feature_engineering.py  model.py
tests/: test_data_processing.py  test_model.py
