[tool.poetry]
name = "ml-project"
version = "0.1.0"
description = "Machine learning project using XGBoost"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^2.0.0"
scikit-learn = "^1.0.0"
xgboost = "^1.7.0"
pyarrow = "^12.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
