[tool.poetry]
name = "ml_project"
version = "0.1.0"
description = "A machine learning project template"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
xgboost = "^2.0.3"
pandas = "^2.1.4"
scikit-learn = "^1.3.2"
numpy = "^1.26.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
